# ComfyUI-SparkTTS

./: AILab_AudioRecorder.py  AILab_SparkTTS.py  AILab_SparkTTS_Core.py  README.md  __init__.py  pyproject.toml  requirements.txt  update.md
example_workflows/: SparkTTS_Node_Sample.json
locales/en/: nodeDefs.json
locales/fr/: main.json  nodeDefs.json
locales/ja/: main.json  nodeDefs.json
locales/ko/: main.json  nodeDefs.json
locales/ru/: main.json  nodeDefs.json
locales/zh/: main.json  nodeDefs.json
sparktts/models/: audio_tokenizer.py
